tests/ui/g-route-policy-required.stderr
error[E0277]: `g::route(left, right)` arms must begin with a controller self-send
 --> tests/ui/g-route-policy-required.rs:8:37
  |
8 |     let _: RoleProgram<0> = project(&route);
  |                             ------- ^^^^^^ route arm must begin with a controller self-send
  |                             |
  |                             required by a bound introduced by this call
  |
  = help: the trait `hibana::global::RouteArmHead` is not implemented for `hibana::g::Send<Role<0>, Role<1>, hibana::global::types::Message<hibana::global::types::LabelMarker<3>, ()>>`
help: the trait `Projectable<Universe>` is implemented for `Program<Steps>`
 --> src/global/program.rs
  |
  | / impl<Universe, Steps> Projectable<Universe> for Program<Steps>
  | | where
  | |     Steps: BuildProgramSource,
  | |______________________________^
  = note: required for `hibana::g::Route<hibana::g::Send<Role<0>, Role<1>, hibana::global::types::Message<hibana::global::types::LabelMarker<3>, ()>>, hibana::g::Send<Role<0>, Role<1>, hibana::global::types::Message<hibana::global::types::LabelMarker<4>, ()>>>` to implement `hibana::global::program::source::BuildProgramSource`
  = note: required for `Program<hibana::g::Route<hibana::g::Send<Role<0>, Role<1>, hibana::global::types::Message<hibana::global::types::LabelMarker<3>, ()>>, hibana::g::Send<Role<0>, Role<1>, hibana::global::types::Message<hibana::global::types::LabelMarker<4>, ()>>>>` to implement `Projectable<DefaultLabelUniverse>`
note: required by a bound in `hibana::integration::program::project`
 --> src/global/role_program/program.rs
  |
  | pub fn project<const ROLE: u8, P>(program: &P) -> RoleProgram<ROLE>
  |        ------- required by a bound in this function
  | where
  |     P: crate::global::program::Projectable<DefaultLabelUniverse> + ?Sized,
  |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `project`

error[E0277]: the trait bound `hibana::g::Send<Role<0>, Role<1>, hibana::global::types::Message<hibana::global::types::LabelMarker<3>, ()>>: hibana::global::RouteArmLoopHead` is not satisfied
 --> tests/ui/g-route-policy-required.rs:8:37
  |
8 |     let _: RoleProgram<0> = project(&route);
  |                             ------- ^^^^^^ unsatisfied trait bound
  |                             |
  |                             required by a bound introduced by this call
  |
  = help: the trait `hibana::global::RouteArmLoopHead` is not implemented for `hibana::g::Send<Role<0>, Role<1>, hibana::global::types::Message<hibana::global::types::LabelMarker<3>, ()>>`
help: the trait `Projectable<Universe>` is implemented for `Program<Steps>`
 --> src/global/program.rs
  |
  | / impl<Universe, Steps> Projectable<Universe> for Program<Steps>
  | | where
  | |     Steps: BuildProgramSource,
  | |______________________________^
  = note: required for `hibana::g::Route<hibana::g::Send<Role<0>, Role<1>, hibana::global::types::Message<hibana::global::types::LabelMarker<3>, ()>>, hibana::g::Send<Role<0>, Role<1>, hibana::global::types::Message<hibana::global::types::LabelMarker<4>, ()>>>` to implement `hibana::global::program::source::BuildProgramSource`
  = note: required for `Program<hibana::g::Route<hibana::g::Send<Role<0>, Role<1>, hibana::global::types::Message<hibana::global::types::LabelMarker<3>, ()>>, hibana::g::Send<Role<0>, Role<1>, hibana::global::types::Message<hibana::global::types::LabelMarker<4>, ()>>>>` to implement `Projectable<DefaultLabelUniverse>`
note: required by a bound in `hibana::integration::program::project`
 --> src/global/role_program/program.rs
  |
  | pub fn project<const ROLE: u8, P>(program: &P) -> RoleProgram<ROLE>
  |        ------- required by a bound in this function
  | where
  |     P: crate::global::program::Projectable<DefaultLabelUniverse> + ?Sized,
  |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `project`

error[E0277]: `g::route(left, right)` arms must begin with a controller self-send
 --> tests/ui/g-route-policy-required.rs:8:37
  |
8 |     let _: RoleProgram<0> = project(&route);
  |                             ------- ^^^^^^ route arm must begin with a controller self-send
  |                             |
  |                             required by a bound introduced by this call
  |
  = help: the trait `hibana::global::RouteArmHead` is not implemented for `hibana::g::Send<Role<0>, Role<1>, hibana::global::types::Message<hibana::global::types::LabelMarker<4>, ()>>`
help: the trait `Projectable<Universe>` is implemented for `Program<Steps>`
 --> src/global/program.rs
  |
  | / impl<Universe, Steps> Projectable<Universe> for Program<Steps>
  | | where
  | |     Steps: BuildProgramSource,
  | |______________________________^
  = note: required for `hibana::g::Route<hibana::g::Send<Role<0>, Role<1>, hibana::global::types::Message<hibana::global::types::LabelMarker<3>, ()>>, hibana::g::Send<Role<0>, Role<1>, hibana::global::types::Message<hibana::global::types::LabelMarker<4>, ()>>>` to implement `hibana::global::program::source::BuildProgramSource`
  = note: required for `Program<hibana::g::Route<hibana::g::Send<Role<0>, Role<1>, hibana::global::types::Message<hibana::global::types::LabelMarker<3>, ()>>, hibana::g::Send<Role<0>, Role<1>, hibana::global::types::Message<hibana::global::types::LabelMarker<4>, ()>>>>` to implement `Projectable<DefaultLabelUniverse>`
note: required by a bound in `hibana::integration::program::project`
 --> src/global/role_program/program.rs
  |
  | pub fn project<const ROLE: u8, P>(program: &P) -> RoleProgram<ROLE>
  |        ------- required by a bound in this function
  | where
  |     P: crate::global::program::Projectable<DefaultLabelUniverse> + ?Sized,
  |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `project`

error[E0277]: the trait bound `hibana::g::Send<Role<0>, Role<1>, hibana::global::types::Message<hibana::global::types::LabelMarker<4>, ()>>: hibana::global::RouteArmLoopHead` is not satisfied
 --> tests/ui/g-route-policy-required.rs:8:37
  |
8 |     let _: RoleProgram<0> = project(&route);
  |                             ------- ^^^^^^ unsatisfied trait bound
  |                             |
  |                             required by a bound introduced by this call
  |
  = help: the trait `hibana::global::RouteArmLoopHead` is not implemented for `hibana::g::Send<Role<0>, Role<1>, hibana::global::types::Message<hibana::global::types::LabelMarker<4>, ()>>`
help: the trait `Projectable<Universe>` is implemented for `Program<Steps>`
 --> src/global/program.rs
  |
  | / impl<Universe, Steps> Projectable<Universe> for Program<Steps>
  | | where
  | |     Steps: BuildProgramSource,
  | |______________________________^
  = note: required for `hibana::g::Route<hibana::g::Send<Role<0>, Role<1>, hibana::global::types::Message<hibana::global::types::LabelMarker<3>, ()>>, hibana::g::Send<Role<0>, Role<1>, hibana::global::types::Message<hibana::global::types::LabelMarker<4>, ()>>>` to implement `hibana::global::program::source::BuildProgramSource`
  = note: required for `Program<hibana::g::Route<hibana::g::Send<Role<0>, Role<1>, hibana::global::types::Message<hibana::global::types::LabelMarker<3>, ()>>, hibana::g::Send<Role<0>, Role<1>, hibana::global::types::Message<hibana::global::types::LabelMarker<4>, ()>>>>` to implement `Projectable<DefaultLabelUniverse>`
note: required by a bound in `hibana::integration::program::project`
 --> src/global/role_program/program.rs
  |
  | pub fn project<const ROLE: u8, P>(program: &P) -> RoleProgram<ROLE>
  |        ------- required by a bound in this function
  | where
  |     P: crate::global::program::Projectable<DefaultLabelUniverse> + ?Sized,
  |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `project`
